Implementación de base de datos
Creación de base de datos y métodos para agregar, modificar y llenar la lista de tareas registradas en la base de datos

--- a/lab1/app/src/main/res/layout/lyt_agregartarea.xml
+++ b/lab1/app/src/main/res/layout/lyt_agregartarea.xml
@@ -108,7 +108,7 @@
                 android:text="Hora entrega:" />
 
             <EditText
-                android:id="@+id/txtHora"
+                android:id="@+id/txtHoraEntrega"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
