--- a/lab1/app/src/main/res/layout/lyt_tareas.xml
+++ b/lab1/app/src/main/res/layout/lyt_tareas.xml
@@ -56,10 +56,18 @@
             android:orientation="horizontal">
 
             <Button
-                android:id="@+id/btn_agregar"
+                android:id="@+id/btnActualizar"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="40dp"
+                android:layout_marginRight="20dp"
+                android:layout_weight="1"
+                android:text="Actualizar" />
+
+            <Button
+                android:id="@+id/btn_agregar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_marginRight="40dp"
                 android:layout_weight="1"
                 android:text="Agregar" />
