--- a/lab1/app/src/main/res/layout/lyt_modificartarea.xml
+++ b/lab1/app/src/main/res/layout/lyt_modificartarea.xml
@@ -17,7 +17,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:layout_marginBottom="20dp"
-            android:text="Registro"
+            android:text="Modificar"
             android:textAlignment="center"
             android:textSize="20dp" />
 
